@@ -17,3 +17,4 @@ fix_target_link_libraries.diff
 enable_debianabimanager.diff
 initialize_variables_crashfix.diff
 enable_dlrestrcitions.diff
+kdm_vt_switching_on_kfreebsd.diff
